--- a/Nifty_Prediction.ipynb
+++ b/Nifty_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Nifty Prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOprzl+jQPycivzwXIRHt5G",
+      "authorship_tag": "ABX9TyMIY6ZOC0Bjxt2H8COd6e/f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4031,6 +4031,264 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4WrkPJgANCJF",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Auto Arima"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ITVTh_UhNEIh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 346
+        },
+        "outputId": "6b892ba4-e5e4-4ef5-c71a-b7de9935ece2"
+      },
+      "source": [
+        "!pip install pmdarima"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting pmdarima\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/83/aa/feb76414043592c3149059ab772a51de03fbf7544a8e19237f229a50a949/pmdarima-1.5.3-cp36-cp36m-manylinux1_x86_64.whl (1.5MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.5MB 2.5MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scikit-learn>=0.22 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (0.22.2.post1)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.18.2)\n",
+            "Requirement already satisfied: statsmodels>=0.10.2 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (0.10.2)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.4.1)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.24.3)\n",
+            "Requirement already satisfied: Cython>=0.29 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (0.29.16)\n",
+            "Requirement already satisfied: pandas>=0.19 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.0.3)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (0.14.1)\n",
+            "Requirement already satisfied: patsy>=0.4.0 in /usr/local/lib/python3.6/dist-packages (from statsmodels>=0.10.2->pmdarima) (0.5.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->pmdarima) (2.8.1)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->pmdarima) (2018.9)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.0->statsmodels>=0.10.2->pmdarima) (1.12.0)\n",
+            "Installing collected packages: pmdarima\n",
+            "Successfully installed pmdarima-1.5.3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lcg5zs36NTGC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pmdarima import auto_arima"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qboM2hgaNXPy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 562
+        },
+        "outputId": "7ab57f15-f209-45ed-fb2e-8358ed3221bc"
+      },
+      "source": [
+        "setupwise_fit = auto_arima(df['Adj Close'], start_p=0, start_q=0, max_p=6, max_q=6, seasonal=True, trace=True, m=5)\n",
+        "#m is number of periods for the season. choose 5 for weekly\n"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Performing stepwise search to minimize aic\n",
+            "Fit ARIMA: (0, 1, 0)x(1, 0, 1, 5) (constant=True); AIC=36195.095, BIC=36219.206, Time=2.814 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(0, 0, 0, 5) (constant=True); AIC=36211.671, BIC=36223.727, Time=0.112 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(1, 0, 0, 5) (constant=True); AIC=36207.227, BIC=36231.338, Time=0.836 seconds\n",
+            "Fit ARIMA: (0, 1, 1)x(0, 0, 1, 5) (constant=True); AIC=36208.398, BIC=36232.509, Time=0.721 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(0, 0, 0, 5) (constant=False); AIC=36210.551, BIC=36216.579, Time=0.058 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(0, 0, 1, 5) (constant=True); AIC=36207.703, BIC=36225.786, Time=0.738 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(1, 0, 0, 5) (constant=True); AIC=36206.733, BIC=36224.816, Time=0.430 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(2, 0, 1, 5) (constant=True); AIC=36187.949, BIC=36218.088, Time=5.513 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(2, 0, 0, 5) (constant=True); AIC=36188.244, BIC=36212.355, Time=2.885 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(2, 0, 2, 5) (constant=True); AIC=36187.792, BIC=36223.959, Time=8.096 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(1, 0, 2, 5) (constant=True); AIC=36187.005, BIC=36217.144, Time=5.610 seconds\n",
+            "Fit ARIMA: (0, 1, 0)x(0, 0, 2, 5) (constant=True); AIC=36189.298, BIC=36213.409, Time=1.154 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(1, 0, 2, 5) (constant=True); AIC=36186.795, BIC=36222.961, Time=6.276 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(0, 0, 2, 5) (constant=True); AIC=36189.276, BIC=36219.415, Time=1.516 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(1, 0, 1, 5) (constant=True); AIC=36194.921, BIC=36225.060, Time=3.413 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(2, 0, 2, 5) (constant=True); AIC=36187.645, BIC=36229.840, Time=9.508 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(0, 0, 1, 5) (constant=True); AIC=36208.305, BIC=36232.417, Time=0.721 seconds\n",
+            "Fit ARIMA: (1, 1, 0)x(2, 0, 1, 5) (constant=True); AIC=36187.727, BIC=36223.894, Time=5.972 seconds\n",
+            "Fit ARIMA: (2, 1, 0)x(1, 0, 2, 5) (constant=True); AIC=36185.716, BIC=36227.911, Time=11.465 seconds\n",
+            "Fit ARIMA: (2, 1, 0)x(0, 0, 2, 5) (constant=True); AIC=36188.127, BIC=36224.293, Time=4.024 seconds\n",
+            "Fit ARIMA: (2, 1, 0)x(1, 0, 1, 5) (constant=True); AIC=36193.829, BIC=36229.996, Time=5.692 seconds\n",
+            "Fit ARIMA: (2, 1, 0)x(2, 0, 2, 5) (constant=True); AIC=36186.808, BIC=36235.031, Time=4.625 seconds\n",
+            "Fit ARIMA: (2, 1, 0)x(0, 0, 1, 5) (constant=True); AIC=36206.603, BIC=36236.742, Time=0.869 seconds\n",
+            "Fit ARIMA: (2, 1, 0)x(2, 0, 1, 5) (constant=True); AIC=36186.626, BIC=36228.821, Time=8.587 seconds\n",
+            "Fit ARIMA: (3, 1, 0)x(1, 0, 2, 5) (constant=True); AIC=36187.416, BIC=36235.639, Time=7.993 seconds\n",
+            "Fit ARIMA: (2, 1, 1)x(1, 0, 2, 5) (constant=True); AIC=36187.555, BIC=36235.777, Time=12.759 seconds\n",
+            "Fit ARIMA: (1, 1, 1)x(1, 0, 2, 5) (constant=True); AIC=36187.511, BIC=36229.706, Time=10.238 seconds\n",
+            "Fit ARIMA: (3, 1, 1)x(1, 0, 2, 5) (constant=True); AIC=36189.397, BIC=36243.647, Time=10.964 seconds\n",
+            "Total fit time: 133.657 seconds\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PHiaKxLePSFz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 516
+        },
+        "outputId": "639a98e8-34da-481d-85ce-4cb11cfb43d3"
+      },
+      "source": [
+        "setupwise_fit.summary()"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<table class=\"simpletable\">\n",
+              "<caption>Statespace Model Results</caption>\n",
+              "<tr>\n",
+              "  <th>Dep. Variable:</th>                 <td>y</td>               <th>  No. Observations:  </th>    <td>3066</td>   \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Model:</th>           <td>SARIMAX(2, 1, 0)x(1, 0, 2, 5)</td> <th>  Log Likelihood     </th> <td>-18085.858</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Date:</th>                  <td>Fri, 10 Apr 2020</td>        <th>  AIC                </th>  <td>36185.716</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Time:</th>                      <td>08:44:25</td>            <th>  BIC                </th>  <td>36227.911</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Sample:</th>                        <td>0</td>               <th>  HQIC               </th>  <td>36200.877</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th></th>                            <td> - 3066</td>            <th>                     </th>      <td> </td>    \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Covariance Type:</th>              <td>opg</td>              <th>                     </th>      <td> </td>    \n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "      <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>intercept</th> <td>    1.0155</td> <td>    1.318</td> <td>    0.770</td> <td> 0.441</td> <td>   -1.569</td> <td>    3.600</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L1</th>     <td>    0.0259</td> <td>    0.010</td> <td>    2.616</td> <td> 0.009</td> <td>    0.007</td> <td>    0.045</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L2</th>     <td>    0.0319</td> <td>    0.008</td> <td>    4.213</td> <td> 0.000</td> <td>    0.017</td> <td>    0.047</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.S.L5</th>   <td>    0.3560</td> <td>    0.137</td> <td>    2.595</td> <td> 0.009</td> <td>    0.087</td> <td>    0.625</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ma.S.L5</th>   <td>   -0.3151</td> <td>    0.139</td> <td>   -2.268</td> <td> 0.023</td> <td>   -0.587</td> <td>   -0.043</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ma.S.L10</th>  <td>    0.0761</td> <td>    0.014</td> <td>    5.263</td> <td> 0.000</td> <td>    0.048</td> <td>    0.104</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>sigma2</th>    <td> 7809.2963</td> <td>   87.962</td> <td>   88.781</td> <td> 0.000</td> <td> 7636.895</td> <td> 7981.698</td>\n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "  <th>Ljung-Box (Q):</th>          <td>91.35</td> <th>  Jarque-Bera (JB):  </th> <td>31994.73</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Prob(Q):</th>                <td>0.00</td>  <th>  Prob(JB):          </th>   <td>0.00</td>  \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Heteroskedasticity (H):</th> <td>1.51</td>  <th>  Skew:              </th>   <td>-0.72</td> \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Prob(H) (two-sided):</th>    <td>0.00</td>  <th>  Kurtosis:          </th>   <td>18.76</td> \n",
+              "</tr>\n",
+              "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+            ],
+            "text/plain": [
+              "<class 'statsmodels.iolib.summary.Summary'>\n",
+              "\"\"\"\n",
+              "                                 Statespace Model Results                                \n",
+              "=========================================================================================\n",
+              "Dep. Variable:                                 y   No. Observations:                 3066\n",
+              "Model:             SARIMAX(2, 1, 0)x(1, 0, 2, 5)   Log Likelihood              -18085.858\n",
+              "Date:                           Fri, 10 Apr 2020   AIC                          36185.716\n",
+              "Time:                                   08:44:25   BIC                          36227.911\n",
+              "Sample:                                        0   HQIC                         36200.877\n",
+              "                                          - 3066                                         \n",
+              "Covariance Type:                             opg                                         \n",
+              "==============================================================================\n",
+              "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+              "------------------------------------------------------------------------------\n",
+              "intercept      1.0155      1.318      0.770      0.441      -1.569       3.600\n",
+              "ar.L1          0.0259      0.010      2.616      0.009       0.007       0.045\n",
+              "ar.L2          0.0319      0.008      4.213      0.000       0.017       0.047\n",
+              "ar.S.L5        0.3560      0.137      2.595      0.009       0.087       0.625\n",
+              "ma.S.L5       -0.3151      0.139     -2.268      0.023      -0.587      -0.043\n",
+              "ma.S.L10       0.0761      0.014      5.263      0.000       0.048       0.104\n",
+              "sigma2      7809.2963     87.962     88.781      0.000    7636.895    7981.698\n",
+              "===================================================================================\n",
+              "Ljung-Box (Q):                       91.35   Jarque-Bera (JB):             31994.73\n",
+              "Prob(Q):                              0.00   Prob(JB):                         0.00\n",
+              "Heteroskedasticity (H):               1.51   Skew:                            -0.72\n",
+              "Prob(H) (two-sided):                  0.00   Kurtosis:                        18.76\n",
+              "===================================================================================\n",
+              "\n",
+              "Warnings:\n",
+              "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+              "\"\"\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TfhJMC58Pg_Y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
