--- a/Nifty_Prediction.ipynb
+++ b/Nifty_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Nifty Prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6UYsNCUmFm2gaDt0Ayn42",
+      "authorship_tag": "ABX9TyNR6WIn8YKMP6gVmODVl6nF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1425,11 +1425,7 @@
       "metadata": {
         "id": "-agD5d6I30k7",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 73
-        },
-        "outputId": "2080847a-1039-43eb-d295-cb080c56bf7d"
+        "colab": {}
       },
       "source": [
         "from pandas_datareader import data\n",
@@ -1440,17 +1436,8 @@
         "                       end='2020-04-09', \n",
         "                       data_source='yahoo')"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas_datareader/compat/__init__.py:7: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  from pandas.util.testing import assert_frame_equal\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -6219,6 +6206,29 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ly2VfCsqftwD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-4QuuQlyF9vo",
+        "colab_type": "text"
+      },
+      "source": [
+        "#SARIMAX Exogenous variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4VsfBg9HGF0F",
         "colab_type": "code",
         "colab": {}
       },
