--- a/Nifty_Prediction.ipynb
+++ b/Nifty_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Nifty Prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN333FaWN7dOhUztS9fCmIy",
+      "authorship_tag": "ABX9TyMl41GXKaqAVLn4R7jkpw9D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -766,6 +766,16 @@
             "\u001b[0;31mValueError\u001b[0m: Unable to coerce to Series, length must be 1: given 293"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-9yQR5p3qax2",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -6252,11 +6262,10 @@
       "metadata": {
         "id": "3c9LTqyKZCk2",
         "colab_type": "code",
+        "outputId": "e59f43b2-5bea-4bb9-862d-6f513754e003",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "e59f43b2-5bea-4bb9-862d-6f513754e003"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import keras\n",
@@ -6264,7 +6273,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7647,11 +7656,11 @@
       "metadata": {
         "id": "hFjQkNnZoWd8",
         "colab_type": "code",
+        "outputId": "601519c9-bea5-4fc4-c430-f49459b77f92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        },
-        "outputId": "601519c9-bea5-4fc4-c430-f49459b77f92"
+        }
       },
       "source": [
         "from pandas_datareader import data\n",
@@ -7662,7 +7671,7 @@
         "                       end='2020-04-15', \n",
         "                       data_source='yahoo')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7688,7 +7697,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7871,7 +7880,7 @@
       "source": [
         "scaler.fit(train)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7915,7 +7924,7 @@
       "source": [
         "scaler_train"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7964,7 +7973,7 @@
       "source": [
         "scaler_train[:5]"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8014,7 +8023,7 @@
       "source": [
         "generator[0]"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8045,7 +8054,7 @@
       "source": [
         "len(scaler_train)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8075,7 +8084,7 @@
       "source": [
         "len(generator)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8153,7 +8162,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8189,7 +8198,7 @@
       "source": [
         "model.fit_generator(train_generator,epochs=5)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8226,16 +8235,16 @@
       "metadata": {
         "id": "I0aV4ljQYJCY",
         "colab_type": "code",
+        "outputId": "36a5faf4-d191-4eca-ce65-0947e5ca53ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "36a5faf4-d191-4eca-ce65-0947e5ca53ae"
+        }
       },
       "source": [
         "model.history.history.keys()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8256,16 +8265,16 @@
       "metadata": {
         "id": "-0qnA1NyI3Nc",
         "colab_type": "code",
+        "outputId": "232d1f6e-fec9-4983-e432-571bb8ebcace",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        },
-        "outputId": "232d1f6e-fec9-4983-e432-571bb8ebcace"
+        }
       },
       "source": [
         "plt.plot(range(len(model.history.history['loss'])),model.history.history['loss'])"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8325,16 +8334,16 @@
       "metadata": {
         "id": "nfrNqWf2LVX0",
         "colab_type": "code",
+        "outputId": "3f817728-8a26-40b7-e7e3-dd58feab81ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "3f817728-8a26-40b7-e7e3-dd58feab81ec"
+        }
       },
       "source": [
         "model.predict(first_eval_batch)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8376,16 +8385,16 @@
       "metadata": {
         "id": "F4WMtVHjPmn_",
         "colab_type": "code",
+        "outputId": "f649bd6f-fca3-4576-d70a-335f6bd46d05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "f649bd6f-fca3-4576-d70a-335f6bd46d05"
+        }
       },
       "source": [
         "len(test_prediction)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8419,16 +8428,16 @@
       "metadata": {
         "id": "GCbF16N-QeFU",
         "colab_type": "code",
+        "outputId": "b788dde8-04c1-4f1f-9b21-ef5a5ed97a8b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 126
-        },
-        "outputId": "b788dde8-04c1-4f1f-9b21-ef5a5ed97a8b"
+        }
       },
       "source": [
         "test['Pred']= true_prediction"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8449,16 +8458,16 @@
       "metadata": {
         "id": "cdCJPOflQx7p",
         "colab_type": "code",
+        "outputId": "cbdc3cc4-82a2-4503-f1c1-9ed9d00cca30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
-        },
-        "outputId": "cbdc3cc4-82a2-4503-f1c1-9ed9d00cca30"
+        }
       },
       "source": [
         "test.plot(figsize=(20,8))"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8522,6 +8531,29 @@
       },
       "source": [
         "new_model = load_model('mynsepredict.h5')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i5fjIrlaqdDw",
+        "colab_type": "text"
+      },
+      "source": [
+        "#https://towardsdatascience.com/basic-principles-to-create-a-time-series-forecast-6ae002d177a4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JIgXwJoYqfMU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
