--- a/TimeSeries_Finance_Udemy_Course.ipynb
+++ b/TimeSeries_Finance_Udemy_Course.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TimeSeries_Finance_Udemy_Course.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqwKdbgNpeggnvTtEIpq/a",
+      "authorship_tag": "ABX9TyOeww1HvmJVxsDdAIRIdJbx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,12 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import fix_yahoo_finance as yf\n",
+        "\n",
+        "stocks = ['^GSPC','^GDAXI','^FTSE','^N225','^NSEI ']\n",
+        "start = datetime.datetime(2012,5,31)\n",
+        "end = datetime.datetime(2018,3,1)\n",
+        "data = yf.download(stocks, start=start, end=end)"
       ],
       "execution_count": 0,
       "outputs": []
